tests/parser/t19662.nim
                var i: int # bug #19662
echo i

discard """
  errormsg: "invalid indentation"
"""